Add ganeti.network: address pool management tools
lib.network contains AddressPool, a helper class for ganeti.objects.Network.
AddressPool wraps a Network object and provides all IPv4 Address Pool
management logic, manipulating the respective fields of the Network object.

Signed-off-by: Apollon Oikonomopoulos <apollon@noc.grnet.gr>

--- a/Makefile.am
+++ b/Makefile.am
@@ -160,7 +160,7 @@ pkgpython_PYTHON = \
 	lib/ssh.py \
 	lib/storage.py \
 	lib/uidpool.py \
-	lib/ippool.py \
+	lib/network.py \
 	lib/workerpool.py
 
 client_PYTHON = \
