Add GRNET's configuration migration scripts
tools/cfgupgrade_grnet: Migrate GRNET's old configuration parameters
tools/upgrade-kvm-runtime: Handle kvm runtime upgrades, removing the obsolete
			   run_as parameter

Use responsibly.

Signed-off-by: Apollon Oikonomopoulos <apollon@noc.grnet.gr>

--- a/Makefile.am
+++ b/Makefile.am
@@ -361,6 +361,8 @@ dist_tools_SCRIPTS = \
 	tools/cfgshell \
 	tools/cfgupgrade \
 	tools/cfgupgrade12 \
+	tools/cfgupgrade_grnet \
+	tools/upgrade-kvm-runtime \
 	tools/cluster-merge \
 	tools/lvmstrap \
 	tools/move-instance \
