--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,7 @@
 
 # doc/examples
 /doc/examples/bash_completion
+/doc/examples/zsh_completion
 /doc/examples/ganeti.cron
 /doc/examples/ganeti.initd
 /doc/examples/ganeti-kvm-poweroff.initd
