Add `fping' as a package dependency
fping is needed to correctly handle master ip activation/deactivation

Signed-off-by: Constantinos Venetsanopoulos <cven@grnet.gr>

--- a/debian/control
+++ b/debian/control
@@ -18,7 +18,7 @@ Depends: ${shlibs:Depends}, ${misc:Depends}, ${python:Depends}, lvm2,
  openssh-client, openssh-server, bridge-utils, iproute, iputils-arping,
  openssl, python-simplejson, python-pyparsing, python-openssl,
  python-pyinotify, python-pycurl, python-paramiko, python-ipaddr, 
- python-bitarray, socat, libjs-jquery
+ python-bitarray, socat, libjs-jquery, fping
 Recommends: drbd8-utils (>= 8.0.7), qemu-kvm |
  xen-linux-system-2.6.32-5-xen-amd64 | xen-linux-system-2.6.32-5-xen-686,
  ganeti-instance-debootstrap, ndisc6, ceph-common
