Add the gnt-storage client
Add a new client called 'gnt-storage'.
The client interacts with the ExtStorage interface, similarly to
the way gnt-os interacts with the OS interface.

For now, only two commands are supported: 'info' and 'diagnose'.

'diagnose' calculates the node status of each provider on each node,
similarly to gnt-os diagnose. Furthermore, for every provider, it
calculates it's nodegroup validity for each nodegroup. This is done
inside the LU and not the client (marked as 'TODO' for the  global
validity of gnt-os diagnose).

In the future, gnt-storage can be used to manage storage pools,
or even be extended to diagnose other storage types supported by
Ganeti, such as lvm, drbd (INT_MIRROR) or rbd (EXT_MIRROR).

Signed-off-by: Constantinos Venetsanopoulos <cven@grnet.gr>

--- a/Makefile.am
+++ b/Makefile.am
@@ -244,7 +244,8 @@ client_PYTHON = \
 	lib/client/gnt_instance.py \
 	lib/client/gnt_job.py \
 	lib/client/gnt_node.py \
-	lib/client/gnt_os.py
+	lib/client/gnt_os.py \
+	lib/client/gnt_storage.py
 
 hypervisor_PYTHON = \
 	lib/hypervisor/__init__.py \
@@ -483,7 +484,8 @@ gnt_scripts = \
 	scripts/gnt-instance \
 	scripts/gnt-job \
 	scripts/gnt-node \
-	scripts/gnt-os
+	scripts/gnt-os \
+	scripts/gnt-storage
 
 PYTHON_BOOTSTRAP_SBIN = \
 	daemons/ganeti-masterd \
