--- a/Makefile.am
+++ b/Makefile.am
@@ -687,6 +687,7 @@ man_MANS = \
 	man/ganeti-masterd.8 \
 	man/ganeti-noded.8 \
 	man/ganeti-os-interface.7 \
+	man/ganeti-extstorage-interface.7 \
 	man/ganeti-rapi.8 \
 	man/ganeti-watcher.8 \
 	man/gnt-backup.8 \
@@ -697,6 +698,7 @@ man_MANS = \
 	man/gnt-job.8 \
 	man/gnt-node.8 \
 	man/gnt-os.8 \
+	man/gnt-storage.8 \
 	man/hail.1 \
 	man/hbal.1 \
 	man/hcheck.1 \
