Modify debian files
Bump 2.6.0~beta1 version in changelog
Add ganeti-htools in Provides, Conflicts, Replaces in control file

Signed-off-by: Dimitris Aragiorgis <dimara@grnet.gr>

--- a/debian/control
+++ b/debian/control
@@ -12,8 +12,8 @@ Vcs-Browser: https://code.grnet.gr/git/snf-ganeti
 
 Package: snf-ganeti
 Architecture: all
-Conflicts: ganeti, ganeti2
-Replaces: ganeti2
+Conflicts: ganeti, ganeti2, ganeti-htools
+Replaces: ganeti2, ganeti-htools
 Depends: ${shlibs:Depends}, ${misc:Depends}, ${python:Depends}, lvm2,
  openssh-client, openssh-server, bridge-utils, iproute, iputils-arping,
  openssl, python-simplejson, python-pyparsing, python-openssl,
@@ -24,7 +24,7 @@ Recommends: drbd8-utils (>= 8.0.7), qemu-kvm |
  ganeti-instance-debootstrap, ndisc6, ceph-common
 #Breaks: ganeti-htools (<< 0.3)
 Suggests: drbd8-module-source (>= 8.0.7)
-Provides: ${python:Provides}, ganeti2
+Provides: ${python:Provides}, ganeti2, ganeti-htools
 Description: Cluster-based virtualization management software
  Ganeti is a virtual server cluster management software tool built on top
  of the Xen virtual machine monitor and other Open Source software. After
