--- a/debian/rules
+++ b/debian/rules
@@ -79,7 +79,7 @@ install: build
 	   $(HTOOLS_DIR)/usr/lib/ganeti/iallocators/
 
 	mkdir -p $(HTOOLS_DIR)/usr/share/man/man1
-	for i in htools hail hbal hscan hspace; do \
+	for i in htools hail hbal hscan hspace hinfo; do \
 	  mv $(GANETI_DIR)/usr/share/man/man1/$${i}.1 \
 	     $(HTOOLS_DIR)/usr/share/man/man1/ ; \
 	done
